Fix extra padding put in by Bootstrap on music embeds

--- a/css/css_add-ins.css
+++ b/css/css_add-ins.css
@@ -272,3 +272,8 @@ a:active {
 	background-color: rgba(216, 149, 35, 0.5)!important
 }
 
+.ratio::before {
+display: block;
+padding-top: 450px;
+content: "";
+}
